# exercise-shorten-url

./: .containerignore  README.md  pyproject.toml
container/: Containerfile  alpine.Containerfile
examples/: urls.txt
exercise_shorten_url/: main.py
