[tool.poetry]
name = "exercise-shorten-url"
version = "0.1.0"
description = ""
authors = ["Luis Santana <lsantana@entelocean.io>"]
readme = "README.md"
packages = [{include = "exercise_shorten_url"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
