[tool.poetry]
name = "exercise-shorten-url"
version = "0.1.0"
description = "Ejercicio de Short URLs"
authors = ["Luis Santana <lsantana.486@gmail.com>"]
readme = "README.md"
packages = [{include = "exercise_shorten_url"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
typer = "^0.12.3"

[tool.poetry.scripts]
short-url-cli = "exercise_shorten_url.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.10.0"
nox = "^2022.8.7"
mypy = "^1.4.1"
isort = "^5.12.0"
ruff = "^0.0.275"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

